--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,11 +15,6 @@
   box-sizing: border-box;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-}
-
 html {
   -webkit-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
